@@ -43,6 +43,10 @@ extern GnomeUIInfo help_menu[], file_menu[], view_menu[], main_menu[];
 
 #define NUM_MDI_MODES 4
 
+#define CHILD_MENU_PATH "File"
+#define CHILD_LIST_PATH "Files/"
+#define GROUP_MENU_PATH "Edit/Group Data As/"
+
 typedef struct _PropertyUI {
 	GnomePropertyBox *pbox;
 	GtkRadioButton *mdi_type[NUM_MDI_MODES];
